Add fav activities gifs and list of skills

--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Charlie profile</title>
 </head>
 
 <body>
-    Under construction
+    <main>
+        <h1>Charlie Russell</h1>
+        <img src="./media/photos/profile.jpeg" alt="">
+        <h2>About me</h2>
+        <h2>Skills</h2>
+        <ul>
+            <li>Sniffing ALL THE THINGS</li>
+            <li>Helping the postperson push the post through the letterbox</li>
+            <li>Finding stinky old tennis balls at the park</li>
+        </ul>
+        <h2>Fav activities</h2>
+        <ol>
+            <li>
+                <p>Charging across muddy fields</p>
+                <img src="/media/gifs/charging.gif" alt="">
+            </li>
+            <li>
+                <p>Upside down boxing</p>
+                <img src="/media/gifs/boxing.gif" alt="">
+            </li>
+            <li>
+                <p>Eating grass</p>
+                <img src="/media/gifs/eating.gif" alt="">
+            </li>
+            <li>
+                <p>Pretending I am a lap dog</p>
+                <img src="/media/gifs/lap.gif" alt="">
+            </li>
+            <li>
+                <p>Being entirely sane</p>
+                <img src="/media/gifs/mad-mo.gif" alt="">
+            </li>
+            <li>
+                <p>Sleeping</p>
+                <img src="/media/gifs/sleeping.gif" alt="">
+            </li>
+
+        </ol>
+    </main>
 </body>
 
 </html>
