--- a/index.html
+++ b/index.html
@@ -13,41 +13,51 @@
     <main>
         <h1>Charlie Russell</h1>
         <img src="./media/photos/profile.jpeg" alt="">
-        <h2>About me</h2>
-        <h2>Skills</h2>
-        <ul>
-            <li>Sniffing ALL THE THINGS</li>
-            <li>Helping the postperson push the post through the letterbox</li>
-            <li>Finding stinky old tennis balls at the park</li>
-        </ul>
-        <h2>Fav activities</h2>
-        <ol>
-            <li>
-                <p>Charging across muddy fields</p>
-                <img src="/media/gifs/charging.gif" alt="">
-            </li>
-            <li>
-                <p>Upside down boxing</p>
-                <img src="/media/gifs/boxing.gif" alt="">
-            </li>
-            <li>
-                <p>Eating grass</p>
-                <img src="/media/gifs/eating.gif" alt="">
-            </li>
-            <li>
-                <p>Pretending I am a lap dog</p>
-                <img src="/media/gifs/lap.gif" alt="">
-            </li>
-            <li>
-                <p>Being entirely sane</p>
-                <img src="/media/gifs/mad-mo.gif" alt="">
-            </li>
-            <li>
-                <p>Sleeping</p>
-                <img src="/media/gifs/sleeping.gif" alt="">
-            </li>
+        <section>
+            <h2>About me</h2>
+            <h2>Skills</h2>
+            <ul>
+                <li>Sniffing ALL THE THINGS</li>
+                <li>Helping the postperson push the post through the letterbox</li>
+                <li>Finding stinky old tennis balls at the park</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Fav activities</h2>
+            <ol>
+                <li>
+                    <p>Charging across muddy fields</p>
+                    <img src="./media/gifs/charging.gif" alt="">
+                </li>
+                <li>
+                    <p>Upside down boxing</p>
+                    <img src="./media/gifs/boxing.gif" alt="">
+                </li>
+                <li>
+                    <p>Eating grass</p>
+                    <img src="./media/gifs/eating.gif" alt="">
+                </li>
+                <li>
+                    <p>Pretending I am a lap dog</p>
+                    <img src="./media/gifs/lap.gif" alt="">
+                </li>
+                <li>
+                    <p>Being entirely sane</p>
+                    <img src="./media/gifs/mad-mo.gif" alt="">
+                </li>
+                <li>
+                    <p>Sleeping</p>
+                    <img src="./media/gifs/sleeping.gif" alt="">
+                </li>
 
-        </ol>
+            </ol>
+        </section>
+        <section>
+            <h2>Websites that my human likes</h2>
+            <ul>
+                <li><a href="http://placecorgi.com/"></a>Place Corgi</li>
+            </ul>
+        </section>
     </main>
 </body>
 
