--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section>
             <h2>Websites that my human likes</h2>
             <ul>
-                <li><a href="http://placecorgi.com/"></a>Place Corgi</li>
+                <li><a href="http://placecorgi.com/">Place Corgi</a></li>
             </ul>
         </section>
     </main>
